# Algo-Trading-RL

./: .env.example  .gitignore  AGENTS.md  README.md  compare_20260513_071859.csv  mkdocs.yml  pyproject.toml  quantphemes_development_plan_v2.md  requirements-docs.txt
.claude/: settings.local.json
apps/: bot.py  compare.py  download_webull_data.py  federate.py  research_report.py  research_sweep.py  run_experiment.py
docs/: ARCHITECTURE.md  DATA_GUIDE.md  RUNBOOK.md  index.md  project_report.html
experiments/: README.md  _baseline.yaml  exp_001_baseline.yaml  exp_002_2800_30min.yaml  exp_003_2800_5min.yaml  exp_004_2800_eod.yaml  exp_005_2828_1h.yaml  exp_006_7299_1h.yaml  exp_007_7299_30min.yaml  exp_008_7568_1h.yaml  exp_009_7568_30min.yaml  exp_010_7226_1h.yaml  exp_011_2800_30min_trade_seeking.yaml  exp_012_2800_30min_trade_aggressive.yaml  exp_013_2800_30min_margin_long.yaml  exp_t1a_random_binary.yaml  exp_t1b_always_long.yaml  exp_t1c_always_cash.yaml  exp_t1d_buy_and_hold.yaml  exp_t1e_qtable_with_oracle.yaml  production_2800.yaml  production_7226.yaml  production_groupmate_2800_1h.yaml  production_groupmate_7226_1h.yaml  production_rl_bias.yaml  production_rl_broad_a.yaml  production_rl_broad_b.yaml  production_rl_cross.yaml  production_rl_facov.yaml  production_rl_fullcov.yaml  production_rl_prime.yaml  production_rl_vol.yaml
notebooks/: README.md  spy_5min_10y_webull_fallback_yfinance.csv  webull_api.ipynb  webull_hk_data_probe.ipynb  webull_hk_etf_downloader.ipynb  webull_us_sp500_probe.ipynb
tests/: test_baselines.py  test_bot_logic.py  test_data.py  (+17 more)
(+1295 files in other folders)
